@@ -1,5 +1,5 @@
 # -*-eselect-*-  vim: ft=eselect
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2017 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
 DESCRIPTION="Manage the Java system and user VM"
@@ -147,10 +147,8 @@ set_symlink() {
 	if [[ -z ${target} ]] ; then
 		die -q "Target \"${1}\" doesn't appear to be valid!"
 	elif [[ -d "${VM_BASE}/${target}" ]] ; then
-		local sym_dir=$(dirname ${symlink})
-		if [[ ! -d ${sym_dir} ]]; then
-			mkdir -p ${sym_dir} || die -q "Could not create ${my_dir}"
-		fi
+		local sym_dir=${symlink%/*}
+		mkdir -p "${sym_dir}" || die -q "Could not create ${sym_dir}"
 		ln -snf "${VM_BASE}/${target}" "${symlink}"
 	else
 		die -q "Target \"${1}\" doesn't appear to be valid!"
